assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

html {
	font-size: 15px;
	background-color: #F5F8F7;
	color: #000;
}

html h1, h2, h3, h4, h5, h6 {
	color: #6e6e73;
}

h1 a {
	text-decoration: none;
}

html .masthead #site-title {
	font-weight: 400;
}

html h1#page-title {
	margin: 15px 0;
	font-weight: 600;
	text-align: center;
	color: RGB(20,106,145);
	font-size: 2em;
}

html h6 {
	font-weight: 500;
	text-transform: uppercase; 
}

html body {
	color: #444;
}

html body .site-title {
	font-weight: 500;
}

html .masthead {
	background-color:#FFF;
}

html .masthead .site-title-wrapper {
	min-width: 150px;
}

html .masthead .visible-links {
	overflow: visible;
}

html table {
	font-size: 0.9em;
}

html table .scientific_name,
html table .height { 
	color: #666;
	font-size: 0.9em;
}

html table .scientific_name {
	font-style: italic;
}

.plant_table td.name img {
    float: left;
    margin: 5px 10px 0 0;
}

.plant_filters .filter_input {
    float: left;
    margin-right: 15px;
}

#new_search_location {
    float: right;
}

.nursery-container .nursery,
.seed-container .seed_source {
	background-color: white;
	float: left;
	margin-bottom: 10px;
	margin-right: 20px;
	min-height: 350px;
	width: 300px;
}

.nursery .info, 
.seed_source .info {
	padding: 0 30px 20px;
}

.volunteer_opportunity {
	background-color: white;
	padding: 20px 30px 20px;
	margin-bottom: 10px;
}

.volunteer_opportunity img {
	float: left;
	margin-right: 20px;
}

.sun_req div {
  display:none; 
  height: 15px;
  width: 15px;
}

.sun_req div.visible {
  display: inline-block;
}

.sun_req .full_sun {
  background-color: yellow;
}

.sun_req .part_shade {
  background-image: linear-gradient(45deg, gray ,yellow);
}

.sun_req .full_shade {
  background-color: gray;
}

